Enhance load more submission Fix date time pipe not showing years

--- a/src/assets/less/components/_images.less
+++ b/src/assets/less/components/_images.less
@@ -48,7 +48,7 @@
 }
 
 .scale-media {
-    height: 35vh;
+    height: 40vh;
 }
 
 .banner-icon {
